--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="core.js"></script>
         <script type="text/javascript" src="chat.js"></script>
+        <script type="text/javascript" src="percolate.js"></script>
         <!-- TODO: Credits: Forge and BigInt -->
         <!-- <script type="text/javascript" src="setup.js"></script> -->
         <script type="text/javascript">
