Can now toggle audio & video and video disabled at start

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                     <video id="their-video" class="call-item" autoplay></video>
                 </div>
                 <div id="call-controls">
-                    <button class="btn btn-danger" id="hang-up">Hang up</button>
+                    <button class="btn btn-info" id="hang-up"><span class="glyphicon glyphicon-phone-alt"></span> Hang up</button>
+                    <button class="btn myui-togglebtn" id="video-toggle"><span class="glyphicon glyphicon-facetime-video"></span> Video</button>
+                    <button class="btn myui-togglebtn" id="audio-toggle"><span class="glyphicon glyphicon-volume-up"></span> Audio</button>
                 </div>
             </div>
             <div id="me">
