Added an error-reporting mechagnism

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <head>
         <meta charset="UTF-8"/>
         <title>PeerJS Thingy</title>
+        <script type="text/javascript">
+            gcon = console;
+        </script>
+        <script type="text/javascript" src="dummyconsole.js"></script>
         <!-- JQuery -->
         <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
         <!-- Bootstrap -->
@@ -165,6 +169,7 @@
             </div>
         </div>
         <!-- Main Javascript -->
+        <script type="text/javascript" src="fetch.js"></script>
         <script type="text/javascript" src="forge.min.js"></script>
         <script type="text/javascript" src="unprefix.js"></script>
         <script type="text/javascript" src="BigInt.js"></script>
