Added a notification system

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                 </div>
             </div>
         </div>
+        <div id="notification">
+            <div id="notification-title">
+                Title
+            </div>
+            <div id="notification-content">
+                Content
+            </div>
+            <div id="notification-close">
+                <span class="glyphicon glyphicon-remove"></span>
+            </div>
+        </div>
         <!-- Main Javascript -->
         <script type="text/javascript" src="fetch.js"></script>
         <script type="text/javascript" src="forge.min.js"></script>
