More work on the e-mail feature

--- a/index.html
+++ b/index.html
@@ -169,13 +169,27 @@
             </div>
         </div>
         <div id="email-layer" class="layer" style="overflow-y: scroll; height: 100vh;">
+            <center class="opensans big email-title">
+                Your e-mail
+            </center>
             <div id="email-top">
                 <br/>
-                <center class="opensans big" style="color: rgb(187, 62, 50);">
-                    Your e-mail
-                </center>
+                <div id="background-name">
+                    Blah <span class="light">by Blah</span>
+                </div>
             </div>
             <div id="email-menu">
+                <center>
+                    <div class="email-menu-item">
+                        Item 1
+                    </div>
+                    <div class="email-menu-item">
+                        Item 2
+                    </div>
+                    <div class="email-menu-item">
+                        Item 3
+                    </div>
+                </center>
             </div>
             <div style="width: 10px; height: 400vh;">
             </div>
