Further work on the e-mail feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <meta charset="UTF-8"/>
         <title>PeerJS Thingy</title>
         <script type="text/javascript">
+            console.log("Hello there!\nLike poking around? RollCall is free software, under the 3-clause BSD license.\nIts source is also available on Github: "
+                + "github.com/ethan2-0/RollCall\nP.S. All of the encryption code is in cryptutil.js; look there if that's what you want\n"
+                + "P.P.S. If you want meaningful line numbers for logs, run: 'console = gcon'");
             gcon = console;
         </script>
         <!-- <script type="text/javascript" src="dummyconsole.js"></script> -->
@@ -28,6 +31,8 @@
         <!-- My stylesheet -->
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link rel="stylesheet" type="text/css" href="call.css">
+        <!-- CodeMirror -->
+        <link rel="stylesheet" type="text/css" href="codemirror.css">
         <!-- Firebase -->
         <script type="text/javascript" src="firebase.js"></script>
         <!-- Login options -->
@@ -180,16 +185,25 @@
             </div>
             <div id="email-menu">
                 <center>
-                    <div class="email-menu-item">
-                        Item 1
+                    <div class="email-menu-item" onclick="email.switchToTab('inbox')">
+                        Inbox
                     </div>
-                    <div class="email-menu-item">
-                        Item 2
-                    </div>
-                    <div class="email-menu-item">
-                        Item 3
+                    <div class="email-menu-item" onclick="email.switchToTab('compose')">
+                        Compose
                     </div>
                 </center>
+            </div>
+            <div id="email-compose" class="email-tab email-tab-shown">
+                <input type="text" placeholder="Subject" id="email-subject"/>
+                <div id="email-codemirror"></div>
+                <div id="preview-button">
+                    Preview
+                </div>
+                <div id="email-preview">
+                </div>
+            </div>
+            <div id="email-inbox" class="email-tab">
+                Hello there
             </div>
             <div style="width: 10px; height: 400vh;">
             </div>
@@ -220,19 +234,28 @@
         <!-- <script type="text/javascript" src="setup.js"></script> -->
         <script type="text/javascript">
             //Asynchronously load scripts
-            function asyncLoad(script) {
+            function asyncLoad(script, callback) {
                 var elm = $("<script>").attr("type", "text/javascript").attr("src", script);
                 $(document.body).append(elm);
             }
             if(localStorage.getItem("peer_setupDone") == null) {
                 asyncLoad("setup.js");
             }
-            $(window).on("load", function() {
+            $(function() {
                 asyncLoad("myui.js");
                 asyncLoad("menu.js");
                 asyncLoad("contextmenu.js");
                 asyncLoad("backgrounds.js");
-            });
+                asyncLoad("codemirror.js");
+                var timerId = setInterval(function() {
+                    if(typeof window.CodeMirror != "undefined") {
+                        setTimeout(function() {
+                            asyncLoad("email.js");
+                        }, 100);
+                        clearInterval(timerId);
+                    }
+                }, 100);
+            })
             isMainPage = true;
         </script>
     </body>
