--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
                 <div id="email-preview">
                 </div>
             </div>
+            <div id="email-friend-chooser">
+                
+            </div>
             <div id="email-inbox" class="email-tab">
                 Hello there
             </div>
